[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Button.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/Heading2.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/Title.tres" type="DynamicFont" id=3]
[ext_resource path="res://GUI/GameOver/GameOver.gd" type="Script" id=4]







[node name="GameOver" type="MarginContainer"]
margin_right = 582.0
margin_bottom = 960.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 582.0
margin_bottom = 960.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.74902 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 582.0
margin_bottom = 960.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 550.0
margin_bottom = 928.0
alignment = 1

[node name="GameOver" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 206.0
margin_right = 518.0
margin_bottom = 311.0
custom_fonts/font = ExtResource( 3 )
text = "GAME OVER"
align = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 315.0
margin_right = 518.0
margin_bottom = 515.0
rect_min_size = Vector2( 0, 200 )

[node name="EnemiesDefeated" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 518.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 2 )
text = "Enemies defeated: 3"

[node name="CrystalCount" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 518.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 2 )
text = "Crystals collected: 10"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 519.0
margin_right = 518.0
margin_bottom = 689.0
custom_constants/separation = 20

[node name="RetryButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_right = 518.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "RETRY"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
margin_top = 95.0
margin_right = 518.0
margin_bottom = 170.0
custom_constants/separation = 20
alignment = 1

[node name="HomeButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 249.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "HOME"

[node name="ShopButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 269.0
margin_right = 518.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "SHOP"
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/HomeButton" to="." method="_on_HomeButton_pressed"]
